# triple-c

./: .gitignore  BUILDING.md  CLAUDE.md  HOW-TO-USE.md  LICENSE  README.md  TECHNICAL.md  TODO.md  Triple-C.md
.claude/: settings.local.json
.gitea/workflows/: backfill-releases.yml  build-app.yml  build.yml  sync-release.yml
app/: index.html  package-lock.json  package.json  tsconfig.json
app/public/: audio-capture-processor.js
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  logging.rs  main.rs
app/src-tauri/src/commands/: aws_commands.rs  docker_commands.rs  file_commands.rs  help_commands.rs  mcp_commands.rs  mod.rs  project_commands.rs  settings_commands.rs  terminal_commands.rs  update_commands.rs
app/src-tauri/src/docker/: client.rs  container.rs  exec.rs  image.rs  mod.rs  network.rs
app/src-tauri/src/models/: app_settings.rs  container_config.rs  mcp_server.rs  mod.rs  project.rs  update_info.rs
app/src-tauri/src/storage/: mcp_store.rs  mod.rs  projects_store.rs  secure.rs  settings_store.rs
app/src/components/layout/: HelpDialog.tsx  (+4 more)
app/src/hooks/: useDocker.ts  useFileManager.ts  useMcpServers.ts  useProjects.ts  useSettings.ts  useTerminal.ts  useUpdates.ts  useVoice.ts
app/src/lib/: constants.ts  tauri-commands.ts  types.ts  urlDetector.ts
app/src/store/: appState.ts
app/src/test/: icon-config.test.ts
container/: Dockerfile  audio-shim  entrypoint.sh  osc52-clipboard  triple-c-scheduler  triple-c-sso-refresh  triple-c-task-runner
(+25 files in other folders)
